--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
   "name": "sipgate-react-components",
-  "version": "0.0.1",
-  "description": "",
+  "version": "0.0.2",
+  "description": "sipgate React Components, used in several sipgate projects.",
   "main": "src/index.js",
   "scripts": {
-    "lint": "eslint .",
-    "start": "start-storybook -p 9001"
+    "start": "start-storybook -p 9001",
+    "lint": "eslint ."
   },
   "keywords": [
     "sipgate",
-    "react"
+    "react",
+    "react-component"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sipgate/react-components.git"
+  },
   "author": "sipgate",
   "license": "Apache-2.0",
   "dependencies": {
@@ -20,6 +25,7 @@
     "@kadira/storybook": "^2.19.0",
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.16.0",
     "debug": "~2.3.0",
     "eslint": "^3.9.1",
@@ -30,7 +36,6 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.24.1",
     "react-dom": "~15.3.2",
-    "babel-preset-react-hmre": "^1.1.1",
     "webpack": "1.13.3"
   }
 }
