Add stopwatch timer component

--- a/package.json
+++ b/package.json
@@ -23,24 +23,28 @@
   "author": "sipgate",
   "license": "Apache-2.0",
   "dependencies": {
-    "react": "^15.3.2"
+    "moment-timezone": "~0.5.9",
+    "react": "~15.3.2",
+    "react-dom": "~15.3.2",
+    "radium": "http://github.com/FormidableLabs/radium/tarball/2c3746eeb83df8a57617f862e167e3ea5d3c27b7",
+    "sprintf-js": "~1.0.3"
   },
   "devDependencies": {
-    "@kadira/storybook": "^2.19.0",
-    "babel-cli": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.16.0",
+    "@kadira/storybook": "~2.19.0",
+    "babel-cli": "~6.18.0",
+    "babel-preset-es2015": "~6.18.0",
+    "babel-preset-react-hmre": "~1.1.1",
+    "babel-preset-stage-0": "~6.16.0",
     "debug": "~2.3.0",
-    "eslint": "^3.9.1",
-    "eslint-config-airbnb": "^12.0.0",
-    "eslint-plugin-import": "^1.16.0",
-    "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.6.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "html-webpack-plugin": "^2.24.1",
+    "eslint": "~3.9.1",
+    "eslint-config-airbnb": "~12.0.0",
+    "eslint-plugin-import": "~1.16.0",
+    "eslint-plugin-jsx-a11y": "~2.2.2",
+    "eslint-plugin-react": "~6.6.0",
+    "extract-text-webpack-plugin": "~1.0.1",
+    "html-webpack-plugin": "~2.24.1",
     "react-dom": "~15.3.2",
-    "rimraf": "^2.5.4",
+    "rimraf": "~2.5.4",
     "webpack": "1.13.3"
   }
 }
