--- a/.eslintrc
+++ b/.eslintrc
@@ -17,8 +17,8 @@
 	},
 	"rules": {
 		"indent" : [2, "tab", { "SwitchCase": 1 }],
-		"react/jsx-indent": [2, 'tab'],
-		"react/jsx-indent-props": [2, 'tab'],
+		"react/jsx-indent": [2, "tab"],
+		"react/jsx-indent-props": [2, "tab"],
 		"no-tabs": 0
 	}
 }
